# rs-pathtracing

./: .gitignore  Cargo.toml  readme.md  world.json
benches/: bench_intersections.rs
scenes/: Cushion.json  Heart.json  cornell_box.json  cube_test.json  detached_materials.json  dupin.json  elipsoid.json  empty.json  heart.json  light_source.json  saved_world.json  scene_with_camera.json  sine.json  spheres.json  star.json  textures.json  tooth.json  torus.json  torus2.json  transformed_sphere.json  world_small.json
src/: camera.rs  lib.rs  main.rs  world.rs
src/algebra/: equation.rs  matrix.rs  mod.rs  noise.rs  transform.rs
src/camera/: mod.rs  ray_caster.rs  uniform_camera.rs
src/renderer/: mod.rs  new_thread_pool.rs  rayon_thread_pool.rs  step_by_step.rs  thread_pool.rs  thread_pool_new.rs  threaded.rs
src/renderer/old/: mod.rs  thread_pool.rs  threaded.rs
src/world/: json_models.rs  material.rs  mod.rs  ray.rs  shapes.rs  texture.rs
src/world/shapes/: brute_forced.rs  mod.rs  no_transform.rs  ray_marching.rs  shapes.rs
