[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "^0.9"
log = "^0.4"
pixels = "^0.7"
winit = "^0.25"
winit_input_helper = "^0.10"
serde_json = "^1.0.59"
serde = { version = "^1.0", features = ["derive"] }
typetag = "^0.1.7"
itertools = "^0.10.1"
time = "^0.3.4"
rand = "^0.8.4"
image = "^0.23.14"
num = "^0.4"