[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
env_logger = "0.10"
log = "0.4"
pixels = "0.11"
winit = "0.28"
winit_input_helper = "0.14"
serde_json = "1.0.94"
serde = { version = "1.0", features = ["derive"] }
typetag = "^0.2.6"
itertools = "^0.10.5"
time = "^0.3.20"
rand = "^0.8.5"
image = "^0.24.5"
num = "^0.4"
raylib = "^3.7"
rayon = "1.7.0"

[dev-dependencies]
criterion = "0.3"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[[bench]]
name = "bench_intersections"
harness = false
